--- a/Prueba1/Index.html
+++ b/Prueba1/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">  
-  <head>    
+  <head>   
+    <h1> HOLA MUNDO</h1> 
     <title>Mi primera WEB</title>    
     <meta charset="UTF-8">
   </head>  
